[project]
name = "GoogleDriveManager"
version = "0.1.0"
description = "A modular Python library for managing Google Drive operations with API key control."
authors = [
    { name = "KutoKashinoki", email = "swimmy.kashiwagi@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "requests",
    "google-auth",
    "google-auth-oauthlib"
]

[project.urls]
"Homepage" = "https://github.com/your-username/GoogleDriveManager"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true
