[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "GoogleDriveManager"
version = "0.1.0"
description = "A modular Python library for managing Google Drive operations with API key control."
authors = [
    { name = "KutoKashinoki", email = "swimmy.kashiwagi@gmail.com" }
]
readme = "README.md"
license = {file="LICENCE"}
requires-python = ">=3.10"
dependencies = [
    "google-auth",
    "google-auth-oauthlib",
    "google-api-python-client"
]

[project.urls]
"Homepage" = "https://github.com/your-username/GoogleDriveManager"
